--- a/only-css.css
+++ b/only-css.css
@@ -17,7 +17,7 @@ body, h1, h2, p, picture {
 /* Body */
 body {
   font-family: "Josefin Sans", sans-serif;
-  color: hsl(0deg, 36%, 70%);
+  color: #e223af;
   font-size: 1rem;
   background-image: linear-gradient(135deg, hsl(0deg, 0%, 100%), hsl(0deg, 100%, 98%));
   line-height: 1.5;
@@ -82,7 +82,7 @@ input, button, select {
 
 /* Colors */
 .accent {
-  color: hsl(0deg, 6%, 24%);
+  color: #550040;
 }
 
 /* Typography */
@@ -113,14 +113,14 @@ input, button, select {
 .form__input {
   padding: 1rem 1.5rem;
   width: 100%;
-  color: hsl(0deg, 6%, 24%);
+  color: #550040;
   background-color: transparent;
-  border: 1px solid hsl(0deg, 36%, 70%);
+  border: 1px solid #e223af;
   border-radius: inherit;
   position: relative;
 }
 .form__input::placeholder {
-  color: hsl(0deg, 36%, 70%);
+  color: #e223af;
 }
 .form__btn {
   position: absolute;
